RESOLVED FIXED Bug 88843
[Shadow DOM] Some distribution invalidation can drop necessary reattachment.
https://bugs.webkit.org/show_bug.cgi?id=88843
Summary [Shadow DOM] Some distribution invalidation can drop necessary reattachment.
Hajime Morrita
Reported 2012-06-11 23:53:28 PDT
This is sub-bug of Bug 88747.
Attachments
Patch (7.48 KB, patch)
2012-06-12 22:24 PDT, Hajime Morrita
no flags
Patch (7.70 KB, patch)
2012-07-16 20:40 PDT, Hajime Morrita
no flags
Hajime Morrita
Comment 1 2012-06-11 23:55:17 PDT
repro: <!DOCTYPE html> <html> <body> <div id="host" class="host"><div>host content</div></div> <script> if (window.layoutTestController) window.layoutTestController.waitUntilDone(); var root = new WebKitShadowRoot(document.querySelector('#host')); root.innerHTML = '<style>something { }</style>' + 'child<div>child of child<content></content></div>'; window.setTimeout(function() { if (window.layoutTestController) window.layoutTestController.notifyDone(); }, 0); </script> </body> </html>
Hajime Morrita
Comment 2 2012-06-12 22:24:19 PDT
Hajime Morrita
Comment 3 2012-06-14 17:27:26 PDT
Dimitri, could you take a look?
Dimitri Glazkov (Google)
Comment 4 2012-07-16 16:31:20 PDT
Comment on attachment 147231 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=147231&action=review > Source/WebCore/ChangeLog:3 > + [Shadow DOM] <style> prevent distributed content from rendering. prevent - prevents? The bug title doesn't seem very precise in describing the problem. You can do better! :) > Source/WebCore/dom/ElementShadow.h:67 > + InvalidateAndForcesReattach InvalidateAndForcesReattach -> InvalidateAndForceReattach
Hajime Morrita
Comment 5 2012-07-16 20:15:15 PDT
Thanks for taking look at this, Dimitri!
Hajime Morrita
Comment 6 2012-07-16 20:40:59 PDT
Hajime Morrita
Comment 7 2012-07-16 20:43:13 PDT
(In reply to comment #5) > Thanks for taking look at this, Dimitri! ... and just updated the patch.
WebKit Review Bot
Comment 8 2012-07-17 21:05:40 PDT
Comment on attachment 152690 [details] Patch Clearing flags on attachment: 152690 Committed r122915: <http://trac.webkit.org/changeset/122915>
WebKit Review Bot
Comment 9 2012-07-17 21:05:45 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.