Source/WebCore/dom/ElementShadow.cpp
@@ -79,7 +79,7 @@ void ElementShadow::addShadowRoot(Element* shadowHost, PassRefPtr<ShadowRoot> sh
     shadowRoot->setHost(shadowHost);
     shadowRoot->setParentTreeScope(shadowHost->treeScope());
     m_shadowRoots.push(shadowRoot.get());
-    invalidateDistribution(shadowHost);
+    invalidateDistribution(shadowHost, InvalidateIfNeeded);
     ChildNodeInsertionNotifier(shadowHost).notify(shadowRoot.get());
 
     if (shadowHost->attached() && !shadowRoot->attached())
@@ -108,7 +108,7 @@ void ElementShadow::removeAllShadowRoots()
         ChildNodeRemovalNotifier(shadowHost).notify(oldRoot.get());
     }
 
-    invalidateDistribution(shadowHost);
+    invalidateDistribution(shadowHost, InvalidateIfNeeded);
 }
 
 void ElementShadow::attach()
@@ -188,22 +188,26 @@ void ElementShadow::ensureDistribution()
     m_distributor.distribute(host());
 }
 
-void ElementShadow::invalidateDistribution()
+void ElementShadow::invalidateDistribution(InvalidationType type)
 {
-    invalidateDistribution(host());
+    invalidateDistribution(host(), type);
 }
 
-void ElementShadow::invalidateDistribution(Element* host)
+void ElementShadow::invalidateDistribution(Element* host, InvalidationType type)
 {
-    if (!m_distributor.needsInvalidation())
-        return;
-    bool needsReattach = m_distributor.invalidate(host);
+    bool needsReattach = (type == InvalidateAndForceReattach);
+    bool needsInvalidation = m_distributor.needsInvalidation();
+
+    if (needsInvalidation)
+        needsReattach |= m_distributor.invalidate(host);
+
     if (needsReattach && host->attached()) {
         host->detach();
         host->lazyAttach(Node::DoNotSetAttached);
     }
 
-    m_distributor.finishInivalidation();
+    if (needsInvalidation)
+        m_distributor.finishInivalidation();
 }
 
 } // namespace
