Source/WebCore/dom/ElementShadow.h
@@ -62,8 +62,13 @@ public:
     bool needsStyleRecalc();
     void recalcStyle(Node::StyleChange);
 
+    enum InvalidationType {
+        InvalidateIfNeeded,
+        InvalidateAndForceReattach
+    };
+
+    void invalidateDistribution(InvalidationType = InvalidateIfNeeded);
     void ensureDistribution();
-    void invalidateDistribution();
  
     InsertionPoint* insertionPointFor(const Node*) const;
 
@@ -71,7 +76,7 @@ public:
     const ContentDistributor& distributor() const;
 
 private:
-    void invalidateDistribution(Element* host);
+    void invalidateDistribution(Element* host, InvalidationType);
 
     DoublyLinkedList<ShadowRoot> m_shadowRoots;
     ContentDistributor m_distributor;
